// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bootstrap when fetch throws should render Error 1`] = `
<div>
  [Error]
</div>
`;

exports[`Bootstrap when mounted should render Loader 1`] = `
<div>
  [Loader]
</div>
`;

exports[`Bootstrap when response is 2xx should render props.children 1`] = `
<div>
  Test: 123
</div>
`;

exports[`Bootstrap when response is empty should render nothing 1`] = `<div />`;

exports[`Bootstrap when response is not 2xx should render Error 1`] = `
<div>
  [Error]
</div>
`;
